# sepfilt2d

./: CMakeLists.txt
Source/: main.cpp
